--- a/apps/core/templates/core/sample_create.html
+++ b/apps/core/templates/core/sample_create.html
@@ -13,7 +13,7 @@ Create Sample
             <legend style="color:#5D4037">Sample Information</legend>
             <table class="table-condensed">
                 <thead>
-                {{form_sample}}
+                {{form}}
                 </thead>
             </table>
          </fieldset><br>
@@ -21,7 +21,7 @@ Create Sample
             <legend style="color:#5D4037">Additional Sample Information</legend>
             <table class="table-condensed">
                 <thead>
-                {{form_additional_sample_information}}
+                {{formset}}
                 </thead>
             </table>
          </fieldset>
