--- a/apps/core/templates/core/sample_delete.html
+++ b/apps/core/templates/core/sample_delete.html
@@ -2,12 +2,12 @@
 {% load staticfiles %}
 
 {% block title %}
-Delete Library
+Delete Sample
 {% endblock %}
 
 {% block body %}
 <div class="container">
-    <h3>Do you want to detete library <i>{{sample.sample_id}}_{{sample.pool_id}}</i>?</h3>
+    <h3>Do you want to detete sample <i>{{sample.sample_id}}</i>?</h3>
     <form action="{% url 'core:sample_delete' pk=pk %}" method="POST">
     	{% csrf_token %}
         <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Delete">
