--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -25,7 +25,7 @@
         <!-- end of header -->
 
         <!-- Page title -->
-        <div class="container", style="background-color:#FF9800; color:#212121; margin-bottom:5px; padding-left:5px;">
+        <div class="container", style="background-color:#DCE775; color:#212121; margin-bottom:5px; padding-left:5px;">
             <h2 style="float:left;">{% block title %}Title{% endblock %}</h2>
         </div>
         <!-- end of page title -->
