--- a/apps/core/templates/core/library_create.html
+++ b/apps/core/templates/core/library_create.html
@@ -21,15 +21,15 @@ Create Library
             <legend style="color:#5D4037">Sublibrary Information</legend>
             <table class="table-condensed">
                 <thead>
-                {{form}}
+                {{sublib_formset}}
                 </thead>
             </table>
          </fieldset><br>
          <fieldset>
-            <legend style="color:#5D4037">Library Sample Detail</legend>
+            <legend style="color:#5D4037">Library Sample Details</legend>
             <table class="table-condensed">
                 <thead>
-                {{form}}
+                {{libdetail_formset}}
                 </thead>
             </table>
          </fieldset><br>
@@ -37,15 +37,15 @@ Create Library
             <legend style="color:#5D4037">Library Construction Information</legend>
             <table class="table-condensed">
                 <thead>
-                {{form}}
+                {{libcons_formset}}
                 </thead>
             </table>
          </fieldset><br>
          <fieldset>
-            <legend style="color:#5D4037">Library Quantification and Storage</legend>
+            <legend style="color:#5D4037">Library Construction and Storage</legend>
             <table class="table-condensed">
                 <thead>
-                {{form}}
+                {{libqs_formset}}
                 </thead>
             </table>
          </fieldset><br>
