--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -145,6 +145,35 @@ Library Details
     {% endif %}
 </div><br>
 <!-- end of Library Quantification and Storage -->
+
+<!-- Sequencing Information -->
+<div class="container">
+    <h4 style="color:#5D4037">Sequencing Information</h4>
+    {% if sample.has_celltable and sample.celltable.sequencinginfo %}
+    <div class="table-responsive" style="text-align:center;">
+        <table class="table-striped table-bordered">
+            <thead>
+                <tr>
+                    {% for field in sample.celltable.sequencinginfo.get_fields %}
+                    <th>{{field}}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    {% for value in sample.celltable.sequencinginfo.get_values %}
+                    <td>{{value}}</td>
+                    {% endfor %}
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    {% else %}
+    <h5><i class="text-warning">There is no sequencing information for this library!</i></h5>
+    {% endif %}
+</div><br>
+<!-- end of Sequencing Information -->
+
 {% endblock %}
 
 
