--- a/apps/core/templates/core/sample_list.html
+++ b/apps/core/templates/core/sample_list.html
@@ -27,7 +27,7 @@ List of Samples
                     <td>{{sample.get_sample_type_display}}</td>
                     <!-- td><a href="{% url 'core:home' %}admin/core/sample/{{sample.pk}}/change">edit</a></td -->
                     <td>
-                        <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:sample_update' pk=sample.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;" "></i> edit</a>
+                        <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:sample_update' pk=sample.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;"></i> edit</a>
                         <a href="{% url 'core:sample_delete' pk=sample.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a></p>
                     </td>
                 </tr>
