--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -18,7 +18,9 @@ List of Libraries
                     <th>Sample ID</th>
                     <th>Pool ID</th>
                     <th>JIRA Ticket</th>
-                    <th></th>
+                    <th>Number of Sublibraries</th>
+                    <th>Sequenced</th>
+                    <th></th>                    
                 </tr>
             </thead>
             <tbody>
@@ -27,6 +29,12 @@ List of Libraries
                     <td><a href="{% url 'core:library_detail' pk=library.pk %}">{{library.sample.sample_id}}</a></td>
                     <td>{{library.pool_id}}</td>
                     <td>{{library.jira_ticket}}</td>
+                    <td style="text-align:center;">{{library.num_sublibraries}}</td>
+                    {% if library.sequencing_set.all %}
+                    <td><i class="fa fa-check" aria-hidden="true" style="color:green;"></i></td>
+                    {% else %}
+                    <td><i class="fa fa-times" aria-hidden="true" style="color:red;"></i></td>
+                    {% endif %}
                     <td>
                         <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:library_update' pk=library.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;" "></i> edit</a>
                         <a href="{% url 'core:library_delete' pk=library.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a></p>
