--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -30,6 +30,9 @@ List of Tables
                         <a href="{% url 'core:sequencing_create' %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add</a></p>
                     </td>
                 </tr>
+                <tr>
+                    <td><a href="{% url 'core:project_list' %}">Projects</a></td>
+                </tr>
             </tbody>
         </table>
 </div>
