--- a/apps/core/templates/core/sample_list.html
+++ b/apps/core/templates/core/sample_list.html
@@ -12,7 +12,7 @@ List of Samples
 </div>
 <div class="container" style="background-color:#F5F5F5;">
     <div class="table-responsive">
-        <table class="table">
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Sample ID</th>
