--- a/apps/core/templates/core/library_create.html
+++ b/apps/core/templates/core/library_create.html
@@ -29,7 +29,7 @@ Create Library
          </fieldset><br>
          <fieldset>
             <legend style="color:#5D4037">Sublibrary Information</legend>
-            <i>Select a SmartChipApp result file to upload:</i>
+            Select a SmartChipApp result file to upload:
             <table class="table-condensed">
                 <thead>
                 {{sublib_form}}
