../../static/core/scripts.js
updated static files.

--- a/apps/core/static/core/style.css
+++ b/apps/core/static/core/style.css
@@ -1,3 +1,53 @@
 #grey_background {
 	background-color: #F5F5F5;
 }
+
+.left-inner-addon {
+    position: relative;
+}
+
+.left-inner-addon input {
+    padding-left: 30px;    
+}
+
+.left-inner-addon i {
+    position: absolute;
+    padding: 10px 12px;
+    pointer-events: none;
+}
+
+.right-inner-addon {
+    position: relative;
+}
+
+.right-inner-addon input {
+    padding-right: 30px;    
+}
+
+.right-inner-addon i {
+    position: absolute;
+    right: 0px;
+    padding: 10px 12px;
+    pointer-events: none;
+}
+
+h4 {
+	color: #5D4037;
+	font-style: italic;
+}
+
+td, th {
+	padding:4px;
+}
+
+a:hover {
+	color: #FF5722;
+}
+
+#footer {
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 3em;
+    margin-top: -3em;
+}
